# Ironclad

./: .gitattributes  .gitignore  AGENTS.md  ARGUS_REBUILD_SPEC.md  BUILD_SCHEDULE.md  CLAUDE.md  DEVIATIONS.md  GETTING_STARTED.md  NEXT_STEPS_TO_GATE1.md  NEXT_STEPS_TO_GATE2.md  NEXT_STEPS_TO_GATE3.md  NEXT_STEPS_TO_PHASE4.md  NEXT_STEPS_TO_PHASE5.md  NEXT_STEPS_UI_TIER2.md  NEXT_STEPS_WEB_FRONTEND.md  app.py  pyproject.toml
.streamlit/: config.toml
api/: __init__.py  main.py  serialize.py
data/properties/: freeport.expected_annual_cash_flow.csv  freeport.icprop.json
docs/: SCHEMA_GUIDE.md  property_model.schema.json
engine/: __init__.py
engine/calc/: __init__.py  absorption.py  capital.py  debt.py  expenses.py  inflation.py  investment.py  leases.py  ledger.py  misc_items.py  percentage_rent.py  recoveries.py  resale.py  revenues.py  run.py  sensitivity.py  timeline.py  vacancy.py  valuation.py
engine/export/: __init__.py  package_builder.py  rent_roll_export.py
engine/intake/: __init__.py  rent_roll_import.py
engine/models/: __init__.py  common.py  cpi.py  expenses.py  inflation.py  investment.py  io.py  leases.py  market_leasing.py  profiles.py  property.py  property_model.py  recoveries.py  revenues.py  vacancy.py  valuation.py
engine/reports/: __init__.py  base.py  benchmark.py  cash_flow.py  lease_audit.py  lease_reports.py  loan_amortization.py  occupancy.py  recovery_audit.py  resale_audit.py  summary_reports.py  valuation_reports.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  format.js  model.js  styles.css
scripts/: build_gate4_workbook.py  dump_audits.py  dump_monthly.py  export_json_schema.py
ui/: __init__.py  convert.py  format.py  main.py  reports_registry.py  session.py  state.py  theme.py
(+80 files in other folders)
