[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ironclad"
version = "0.1.0"
description = "Commercial real estate DCF platform: headless calculation engine, FastAPI API, Streamlit UI"
requires-python = ">=3.11"
# Stack per ARGUS_REBUILD_SPEC.md §2.1
dependencies = [
    "numpy",
    "pandas",
    "pydantic>=2",
    "sqlmodel",
    "fastapi",
    # PINNED (NEXT_STEPS_UI_TIER2.md brittleness rule): ui/theme.py CSS
    # keys off Streamlit-internal DOM attributes; upgrading is a
    # deliberate act that re-verifies that file, never a pip side effect.
    "streamlit==1.58.0",
    "plotly",
    "xlsxwriter",
    "openpyxl",
]

[project.optional-dependencies]
# pypdf: reading reference/Argus_Training_Guide.pdf (manual page cites) is a recurring need
dev = ["pytest", "pypdf"]

[tool.setuptools.packages.find]
include = ["engine*", "api*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
